<resources>


    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="category_explorer">Program</string>
    <string name="category_counting">Caculate</string>
    <string name="category_remind">Remind</string>
    <string name="category_target">Custom</string>
    <string name="bmi_info">BMI is a screening tool that can indicate whether a person is underweight or if they have a healthy weight, excess weight, or obesity. If a person has BMI is outside of the healthy range, their health risks may increase significantly.</string>

    <string name="res1">The infomation contained in this application is for education purposes only and is not a substitute for medical
    and fitness advice from a doctor, Fitness experts and health care providers. Consult a health care provider for advice about any
    course of treatment or medical condition. Seek advice from Fitness experts and Nutrition experts for Excercise and Diet activities.</string>
    <string name="res2">We do not store, supervise and do not claim ownership on any contents created by the application users.
    You acknowledge that clearing application data or uninstalling this application from your device could result in loss of all data.</string>
    <string name="res3">In Connection with use of services, you are required to create a profile. The information provided by you will not
    be shared or disclosed to anyone under any circumstances.</string>
    <string name="res4">We have gone to great lengths to ensure that all Fitness and Health related information in this application and the
    promoting materials relating to it, is correct. However, we do not assume any responsibility for potential errors and misinformation that
    this application may still contain, nor for any potential damages or losses arising from relying on or applying the information contained
    hear.</string>
    <string name="res5">This application is licensed with Google Play. You may use this application solely for your personal use and must
    not modify, reproduce or distribute the software in any way or use it for any commercial purpose. By using this application, you agree
    to all our terms and conditions mentioned above.</string>
    <string name="us">We appreciate your use of our application. We will try our best to have continuous improvements to help Lazy Guy become
        more and more useful to everyone. You can follow us on the channels below.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="web_client_id">469321592778-1eb2ubao7vo0nhsinkfk393q42bbcgdl.apps.googleusercontent.com</string>
    <string name="server_client_id">469321592778-s3gcchj10tc2hbraj04rvjohetjnccdr.apps.googleusercontent.com</string>
    <string name="server_client_secret">iTDmxhubUViWuCN1tKL5S42t</string>

    <string name="map_api_key">AIzaSyDiknFb_PAk9uXW7xCeK72mkxqvRcr8H3M</string>

    <string name="app_name">LazyGuy</string>
    <string name="facebook_application_id" translatable="false">335405417331249</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb335405417331249</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_account">Account</string>

    <string name="pref_title_account">Market</string>
    <string-array name="pref_market_titles">
        <item>United States</item>
        <item>Canada</item>
        <item>United Kingdom</item>
        <item>India</item>
        <item>Japan</item>
        <item>Other</item>
    </string-array>
    <string-array name="pref_market_values">
        <item>US</item>
        <item>CA</item>
        <item>UK</item>
        <item>IN</item>
        <item>JA0</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_account_settings">Account settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string-array name="pref_nationality">
        <item>Asia</item>
        <item>Africa</item>
        <item>Australia</item>
        <item>Europe</item>
        <item>North America</item>
        <item>South America</item>
    </string-array>

    <string name="facebook_app_id">335405417331249</string>
    <string name="fb_login_protocol_scheme">fb335405417331249</string>

</resources>
